tests/errors/Same_type.f90
program Same_type
    print *, same_type_as(1.0, 1.0)
end program 